syntax = "proto3";

package keelson.flightcontroller;

// Common message types for MAVLink v2
// Try using GENRIC messsege types first, then use specific ones like this if needed"
// Should this be in a separate file? or categirized by message type keelson.non-generic??? 

message PowerStatus {
  uint32 Vcc = 1;
  uint32 Vservo = 2;
  uint32 flags = 3;
}

message MemInfo {
  uint32 brkval = 1;
  uint32 freemem = 2;
  uint32 freemem32 = 3;
}

message MissionCurrent {
  uint32 seq = 1;
  uint32 total = 2;
  uint32 mission_state = 3;
  uint32 mission_mode = 4;
}

message ServoOutputRaw {
  uint64 time_usec = 1;
  uint32 port = 2;
  repeated uint32 servo_raw = 3; // 16 channels (speedybee has 11)
}

message RCChannels {
  uint32 time_boot_ms = 1;
  uint32 chancount = 2;
  repeated uint32 chan_raw = 3; // 18 channels
  uint32 rssi = 4;
}

message RawIMU {
  uint64 time_usec = 1;
  int32 xacc = 2;
  int32 yacc = 3;
  int32 zacc = 4;
  int32 xgyro = 5;
  int32 ygyro = 6;
  int32 zgyro = 7;
  int32 xmag = 8;
  int32 ymag = 9;
  int32 zmag = 10;
  uint32 id = 11;
  int32 temperature = 12;
}

message ScaledPressure {
  uint32 time_boot_ms = 1;
  float press_abs = 2;
  float press_diff = 3;
  int32 temperature = 4;
  float temperature_press_diff = 5;
}

message GPSRawInt {
  uint64 time_usec = 1;
  uint32 fix_type = 2;
  int32 lat = 3; // OK
  int32 lon = 4; // OK
  int32 alt = 5; // OK
  uint32 eph = 6; 
  uint32 epv = 7;
  uint32 vel = 8;
  uint32 cog = 9;
  uint32 satellites_visible = 10;
  int32 alt_ellipsoid = 11;
  uint32 h_acc = 12;
  uint32 v_acc = 13;
  uint32 vel_acc = 14;
  uint32 hdg_acc = 15;
  uint32 yaw = 16;
}

message SystemTime {
  uint64 time_unix_usec = 1;
  uint32 time_boot_ms = 2;
}

message AHRS {
  double omegaIx = 1;
  double omegaIy = 2;
  double omegaIz = 3;
  float accel_weight = 4;
  float renorm_val = 5;
  float error_rp = 6;
  float error_yaw = 7;
}

message EKFStatusReport {
  uint32 flags = 1;
  float velocity_variance = 2;
  float pos_horiz_variance = 3;
  float pos_vert_variance = 4;
  float compass_variance = 5;
  float terrain_alt_variance = 6;
  float airspeed_variance = 7;
}

message Vibration {
  uint64 time_usec = 1;
  float vibration_x = 2;
  float vibration_y = 3;
  float vibration_z = 4;
  uint32 clipping_0 = 5;
  uint32 clipping_1 = 6;
  uint32 clipping_2 = 7;
}

message BatteryStatus {
  uint32 id = 1;
  uint32 battery_function = 2;
  uint32 type = 3;
  int32 temperature = 4;
  repeated uint32 voltages = 5;
  int32 current_battery = 6;
  int32 current_consumed = 7;
  int32 energy_consumed = 8;
  int32 battery_remaining = 9;
  int32 time_remaining = 10;
  uint32 charge_state = 11;
  repeated uint32 voltages_ext = 12;
  uint32 mode = 13;
  uint32 fault_bitmask = 14;
}

message RCChannelsScaled {
  uint32 time_boot_ms = 1;
  uint32 port = 2;
  repeated int32 chan_scaled = 3;
  uint32 rssi = 4;
}

message Attitude {
  uint32 time_boot_ms = 1;
  float roll = 2;
  float pitch = 3;
  float yaw = 4;
  float rollspeed = 5;
  float pitchspeed = 6;
  float yawspeed = 7;
}

message VFRHUD {
  float airspeed = 1;
  float groundspeed = 2;
  uint32 heading = 3;
  uint32 throttle = 4;
  float alt = 5;
  float climb = 6;
}

message AHRS2 {
  float roll = 1;
  float pitch = 2;
  float yaw = 3;
  float altitude = 4;
  int32 lat = 5;
  int32 lng = 6;
}

message GlobalPositionInt {
  uint32 time_boot_ms = 1;
  int32 lat = 2;
  int32 lon = 3;
  int32 alt = 4;
  int32 relative_alt = 5;
  int32 vx = 6;
  int32 vy = 7;
  int32 vz = 8;
  uint32 hdg = 9;
}

message SysStatus {
  uint32 onboard_control_sensors_present = 1;
  uint32 onboard_control_sensors_enabled = 2;
  uint32 onboard_control_sensors_health = 3;
  uint32 load = 4;
  uint32 voltage_battery = 5;
  int32 current_battery = 6;
  int32 battery_remaining = 7;
  uint32 drop_rate_comm = 8;
  uint32 errors_comm = 9;
  uint32 errors_count1 = 10;
  uint32 errors_count2 = 11;
  uint32 errors_count3 = 12;
  uint32 errors_count4 = 13;
}

